# RF95-Galileo-port

./: CMakeLists.txt  rfm95-client.cpp  rfm95-server.cpp
include/: RH_RF95.h
src/: CMakeLists.txt  RH_RF95.cpp
